--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
                         <goal>shade</goal>
                     </goals>
                     <configuration>
+                        <createDependencyReducedPom>false</createDependencyReducedPom>
                         <transformers>
                             <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                 <mainClass>cz.vse.server.Server</mainClass> </transformer>
@@ -48,6 +49,14 @@
             </executions>
             </plugin>
         </plugins>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+            </resource>
+        </resources>
     </build>
 
 </project>
